--- a/0.2.Aplicaciones.md
+++ b/0.2.Aplicaciones.md
@@ -25,15 +25,15 @@ Especialmente existen modelos de aquellos conceptos un poco más complejos de en
 
 También son muchos los [Proyectos de ciencia](https://www.thingiverse.com/MakerBotLearning/collections/science-projects) disponibles para imprimir en todo tipo de Ciencias con pueden ser las ciencias naturales la geología o cualquiera de los ámbitos vamos a poder encontrar una representación esquemática de un corte de la tierra:
 
-![Corte de la estructura interna de la tierra](https://cdn.thingiverse.com/renders/30/e8/04/d6/6d/IMG_1895_Crop_preview_card.jpg)
+![Corte de la estructura interna de la tierra](./images/IMG_1895_Crop_preview_card.jpg)
 
 O de los diferentes tipos de células, como la célula animal:
 
-![Cells](https://cdn.thingiverse.com/renders/cb/27/3c/11/fb/61d0922c1fe213079382f35dd90a4a82_preview_card.jpg)
+![Modelo de Célula animal](./images/ModeloCelulaVegetal.jpg)
 
 O la célula vegetal
 
-![celula montable](https://thingiverse-production-new.s3.amazonaws.com/renders/31/87/51/87/f2/882eee1e76aaafc4e3609c0776acdadb_preview_featured.jpg)
+![Célula montable](./images/ModeloCelulaAnimal.jpg)
 
 [Modelo de célula animal](https://www.thingiverse.com/thing:2485063)
 
@@ -56,14 +56,14 @@ Un campo  qué aplicación ideal para la impresión 3D son las matemáticas dón
 
 Como ya hemos visto las impresoras 3D aparecieron como una forma de facilitar la creación de prototipos.  Uno de estos campos más interesantes es la creación de [Material de Laboratorio](https://www.thingiverse.com/javacasm/collections/laboratorio) de bajo coste y sobre todo el tener la total libertad para crear nuestro propio material modificando el que ya existe o adaptándola a nuestras necesidades.
 
-![pipeta](https://cdn.thingiverse.com/renders/d7/68/6a/35/52/IMG_1752_preview_card.jpg)
+![Pipeta impresa](https://cdn.thingiverse.com/renders/d7/68/6a/35/52/IMG_1752_preview_card.jpg)
 
 ## Química
 
 La [Química](https://www.thingiverse.com/javacasm/collections/quimica)  es un campo donde podemos aprovechar las capacidades visuales de las piezas impresas en 3D para entender conceptos complejos como puede ser la estructura de las moléculas.
 
 
-![Epinefrina](https://cdn.thingiverse.com/renders/94/43/04/e5/03/WP_20141007_010_preview_card.jpg)
+![Molécula de Epinefrina](https://cdn.thingiverse.com/renders/94/43/04/e5/03/WP_20141007_010_preview_card.jpg)
 
 ## Aplicaciones médicas
 
@@ -78,7 +78,7 @@ Otro ejemplo de proyecto extremadamente interesante con aplicaciones médicas en
 
 ![Ejemplo del proyecto eNable](./images/NEWRELOADED.jpg)
 
-![Ejemplo del proyecto eNable, esta vez la prótesis de Issabella](./images/ISABELLAARMteam.jpg)
+![Ejemplo del proyecto eNable, esta vez la prótesis de Isabella](./images/ISABELLAARMteam.jpg)
 
 ## Aplicaciones para ingeniería
 
@@ -104,19 +104,19 @@ o su cambio de marchas
 
 O para la construcción de prototipos de máquinas de laboratorio  para realizar todo tipo de ensayo como estos de [medida de resistencia de materiales](http://3dprint.com/57992/testrbot-3d-print-testing/) 
 
-![maquina](http://3dprint.com/wp-content/uploads/2015/04/test.png)
+![Máquina para ensayos de resistencia](http://3dprint.com/wp-content/uploads/2015/04/test.png)
 
-* Turbina de avión
+O esta turbina de avión:
 
 ![Réplica de una turbina de avión](http://3dprint.com/wp-content/uploads/2014/10/jets1.jpg) [[modelo]](https://www.thingiverse.com/thing:392115)[[historia del modelo]](http://3dprint.com/17716/3d-printed-jet-engine/)
 
-![turbina de avión que funciona](http://thingiverse-production-new.s3.amazonaws.com/renders/f5/fe/54/c3/53/Gerrys_Jet_Engine_preview_featured.jpg)
+![Modelo de turbina de avión](http://thingiverse-production-new.s3.amazonaws.com/renders/f5/fe/54/c3/53/Gerrys_Jet_Engine_preview_featured.jpg)
 
 [[modelo]](http://www.thingiverse.com/thing:114468)    [[vídeo]](https://www.youtube.com/watch?v=6rX4xv5-NvE)
 
 Podemos trabajar y tocar con equipos que en otro caso estarían fuera de nuestro alcance:
 
-![modelo pequeño de turbina](http://3dprint.com/wp-content/uploads/2014/07/buildyourown5.gif)
+![Modelo pequeño de turbina](http://3dprint.com/wp-content/uploads/2014/07/buildyourown5.gif)
 
 [[modelo]](https://www.thingiverse.com/thing:392115)
 
