--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -61,11 +61,11 @@ Para ello basta con ver las resoluciones (partícula más que pequeña que es ca
 
 En la imagen se ve claramente la diferencia de calidad en el resultado:
 
-![FDM_vs_DLP](./images/FDM_vs_DLP.jpeg)
+![Diferencia de resolución y calidad entre tecnología FDM vs DLP](./images/FDM_vs_DLP.jpeg)
 
 FDM 0.2mm vs DLP 0.02mm
 
-![FDM vs DLP](./images/FDMvsDLP2.png)
+![Diferencia de resolución y calidad entre tecnología FDM vs DLP](./images/FDMvsDLP2.png)
 
 Viendo este resultado nos preguntamos ¿por qué no utilizamos impresoras de tecnología DLP?  aquí hace hoy la principal diferencia el coste del material el filamento nos cuesta aproximadamente unos 20 € por kilo mientras que la resina puede llegar a costarnos más de 100€.  En aquellos mercados en los que se puede vender objetos impresos a un alto precio cada vez se utiliza más obviamente la tecnología DLP.
 
