--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -6,7 +6,7 @@
 
 Vamos a hacer un recorrido sobre diferentes repositorios de modelos desde los que podemos descargar ficheros para imprimir.
 
-En estos repositorios vamos a encontrar todo tipo de diseños, que se habrán realizado con diferentes programas de diseño. Pero la mayoría de ellos tendrán un fichero de malla de puntos de tipo STL o de tipo OBJ que vamos a poder utilizar para imprimir.   En el caso en el que el fichero estuviera en otro formato vamos a  necesitar convertirlo a uno de estos dos formatos. Esto lo podremos hacer en la mayoría de los software de diseño donde siempre va a asistir una opción de exportación a formato STL o formato OBJ. 
+En estos repositorios vamos a encontrar todo tipo de diseños, que se habrán realizado con diferentes programas de diseño. Pero la mayoría de ellos tendrán un fichero de malla de puntos de tipo STL o de tipo OBJ que vamos a poder utilizar para imprimir.   En el caso en el que el fichero estuviera en otro formato vamos a  necesitar convertirlo a uno de estos dos formatos. Esto lo podremos hacer en la mayoría de los software de diseño donde siempre va a asistir una opción de exportación a formato **STL** o formato **OBJ**. 
 
 Puesto que existen diferentes técnicas de diseño no todos los modelos son aptos para imprimirse.  Algunos de ellos, a pesar de que tengan un aspecto excelente, incluyen en su estructura pequeños agujeros o fisuras. En el proceso de laminado, el programa laminador cometerá errores  al generar las capas y  nos desaconsejará su impresión.
 
@@ -34,7 +34,7 @@ Y otros que en principio no tienen nada que ver... nos ocurre un poco como nos p
 
 En thingiverse no hay nadie que se encargue de organizar la información ni filtrar. 
 
-Vamos a ver ahora una colección de repositorios donde los diseños son en media de gran calidad, puestos que existen cuidadores que se encargan de validar la calidad de los diseños.
+Vamos a ver ahora una colección de repositorios donde los diseños son en media de gran calidad, puesto que existen cuidadores que se encargan de validar la calidad de los diseños.
 
 
 ## [You Imagine](https://www.youmagine.com)
@@ -59,6 +59,18 @@ O diseño muy realistas como [este helicóptero ruso](https://sketchfab.com/3d-m
 
 También vamos a encontrar modelos de pago.
 
+Vamos a aprovechar para comentar que no todos los modelos que podemos descargar y que parecen modelos 3D, son aptos para impresión 3D.  
+
+En concreto vamos a ver un ejemplo de algunos de estos modelos Con un aspecto totalmente realista pero que no son aptos para imprimirlos en 3D. Normalmente estos modelos  han sido escaneados con un escáner 3D,  por un lado son una malla de puntos y por otro una textura (como si dijéramos una pintura que se le aplica externamente a la malla) y es lo que le da un resultado fotorealista. Es un proceso similar al que se hace con los videojuegos en los que los personajes 3D tienen un recubrimiento que le da un aspecto más realista. 
+
+
+Es lo que ocurre con este [modelo de escarabajo Rinoceronte](https://sketchfab.com/3d-models/rhinoceros-beetle-10d4ecc6b3f3427a9041087314b17ed5)
+
+![Modelo fotorealista de Escarabajo Rinoceronte](./images/ModeloEscarabajoRinoceronte.png)
+
+[![Video: 2.1 modelos con errores](https://img.youtube.com/vi/NDORt3mz9yE/0.jpg)](https://drive.google.com/file/d/1XzOpe6ED-lRebLQdtTRyXoYzcsFvoXYI/view?usp=sharing)
+
+[Video: 2.1 modelos con errores](https://drive.google.com/file/d/1XzOpe6ED-lRebLQdtTRyXoYzcsFvoXYI/view?usp=sharing)
 
 ## [MyMiniFactory](https://www.myminifactory.com/)
 
