--- a/6.7.Escaneado3D.md
+++ b/6.7.Escaneado3D.md
@@ -2,6 +2,10 @@
 
 ## Tipos de escanner 3D
 
+video sesion3 Guadix (~/Videos/3D) 19:00
+
+
+
 Escanner 3D DIY
 
 ![Escaner pequeño](./images/Escanner3D.jpeg)
