--- a/2.5.Filamentos.md
+++ b/2.5.Filamentos.md
@@ -91,7 +91,7 @@ Vamos a repasar sus características y algunos de sus usos.
 
 * Ninjaflex y Filaflex: son filamento muy flexibles, similares a la silicona o al goma y que además de elásticos y flexibles tiene una gran adherencia, algo que es necesario para muchas piezas, como por ejemplo la parte externa de las ruedas, lo que sería el neumático. Son filamentos más caros, pero que no suelen utilizar en grandes piezas.
 
-![filamentoFlexible](./images/filamentoFlexible.jpg)
+![Zapatillas impresas con Filamento Flexible](./images/filamentoFlexible.jpg)
 
 
 Estos filamentos que hemos visto casi nunca vienen de una forma pura, sino que los fabricantes los combinan para mejorar sus características.
