--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -2,22 +2,11 @@
 
 
 
-
-
-### Ventiladores
-
-ruido...
-
-**Ventilador de extrusor** suele estar al 100% todo el tiempo
-
-**Ventilador de capa**
-![](./images/VentiladoresCapa.jpg)
-
-[Modelo](https://www.thingiverse.com/thing:1722918)
-
-
-
 ## Extrusor + fusor (HotEnd)
+
+El funcionamiento de una extrusor es muy sencillo conceptualmente: se trata simplemente de un motor que es capaz de mover el filamento de una forma precisa al mismo tiempo que lo funde para conseguir que se aporte una cantidad exacta de material
+
+![extrusor](./images/imagen_hotend.jpg)
 
 Una de las partes fundamentales de toda impresora es el conjunto extrusor + fusor (HotEnd).  En muchas ocasiones, por abuso del lenguaje, se llama extrusor al conjunto de los dos componentes,  pero hablando con propiedad debemos distinguirlos puesto que tienen roles muy distintos:
 *  el extrusor es la parte mecánica  que mueve el filamento y que alimenta al otro componente
@@ -50,6 +39,8 @@ Este componente se calienta, con lo que normalmente tiene un disipador.
 
 También suelen incluir un potenciómetro para ajustar la cantidad de potencia que transmite al motor.
 
+![2](./images/EsquemaImpresora3D.png)
+
 ### Drivers
 
 Clásicos
@@ -63,6 +54,22 @@ Número de pasos
 Hoy en día existen diferentes tipos de placas cada vez más potentes que además de controlar la impresora no permiten manejar la de una forma mucho más sencilla integrando pantalla de visualización gráfica a color incluso conexiones remotas como puede ser con Wi-Fi
 
 A día de hoy la mayoría de la impresora utilizan una placa de control de 32 bits con una potencia de sobra para manejar la impresora, consiguiente un movimiento mucho mas suave y silencioso de los motores.
+
+
+
+
+### Ventiladores
+
+ruido...
+
+**Ventilador de extrusor** suele estar al 100% todo el tiempo
+
+**Ventilador de capa**
+![](./images/VentiladoresCapa.jpg)
+
+[Modelo](https://www.thingiverse.com/thing:1722918)
+
+
 
 ### Fuente de alimentación
 
@@ -91,6 +98,6 @@ A medida que se hace más compleja entrenamiento de la impresora incluyendo más
 
 También alguna de las impresoras incluyen sistemas para cambio de filamento es decir son capaces de utilizar distintos filamentos de forma alternativa para ello es necesario conocer con precisión todos estos componentes y cuando el filamento está listo para imprimir
 
-El funcionamiento de una extrusor es muy sencillo conceptualmente: se trata simplemente de un motor que es capaz de mover el filamento de una forma precisa al mismo tiempo que lo funde para conseguir que se aporte una cantidad exacta de material
+
 
 
