--- a/4.0.2.TiposExtrusores.md
+++ b/4.0.2.TiposExtrusores.md
@@ -15,15 +15,18 @@ Otros extrusores utilizan un sistema de engranaje que multiplican la fuerza del 
 
 ## Estructura del extrusor
 
-La parte más sencilla es la boquilla, en la parte final y no garantiza que el la extrusión del firmamento va a tener un tamaño controlado normalmente están hechas de latón y sufre un gran desgaste en contra de Nenuco podría pensar el plástico fundido la paga estando en necesario cambiar la consideran un elemento fungible
+
+![extrusor](./images/imagen_hotend.jpg)
+
+La parte más sencilla es la **boquilla** (A), en la parte final y no garantiza que el la extrusión del firmamento va a tener un tamaño controlado normalmente están hechas de latón y sufre un gran desgaste en contra de Nenuco podría pensar el plástico fundido la paga estando en necesario cambiar la consideran un elemento fungible
 
 La parte central del fusor dónde se funde realmente el filamento está formada por una cilindro largo que al mismo tiempo tiene que tener por un extremo una temperatura alta que dónde se produce propiamente la fundición del plástico y por el otro extremo debe tener la temperatura lo más baja posible de ahí que en esta parte se suele incluir unos elementos disipadores para que la temperatura sea baja en la zona adecuada.
 
-La cabeza calefactora suele ser un componente un bloque en el que tenemos por un lado un elemento calefactor suele ser una resistencia cerámica que es la responsable de alcanzar la temperatura alta necesaria para fundir el filamento y un sensor que suele ser una resistencia en etc o etc que mide la temperatura con precisión con el fin de ajustar el ciclo de control
+La **cabeza calefactora** (B) suele ser un componente un bloque en el que tenemos por un lado un elemento calefactor suele ser una resistencia cerámica que es la responsable de alcanzar la temperatura alta necesaria para fundir el filamento y un sensor que suele ser una resistencia en etc o etc que mide la temperatura con precisión con el fin de ajustar el ciclo de control
 
 Dentro de este cilindro o barrel se suele incluir un tubo de un material conocido como PTFE que tiene una un gran coeficiente de deslizamiento y que permite que el filamento fluya este elemento conocido también como teflón nos permite que el filamento se mueva con facilidad y al mismo tiempo no se adhiera en el caso de que esté fundido
 
-También se considera un elemento fungible y que tenemos que reparar que cambiar cada cierto número de hora de i.presionmisión
+También se considera un elemento fungible y que tenemos que reparar que cambiar cada cierto número de hora de impresión.
 
 Los extrusores suelen incluir en la parte de fuera del disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible
 
@@ -32,7 +35,7 @@ Los extrusores suelen incluir en la parte de fuera del disipador un ventilador q
 
 ¿cuál usar?
 
-
+Dependiendo de si queremos extruir mucho plástico o queremos más precisión
 
 ## Extrusor i3 Mendel
 
