--- a/4.1.0.Geometrias.md
+++ b/4.1.0.Geometrias.md
@@ -20,14 +20,22 @@ Si utilizamos una mecánica más compleja como la core x a podemos encontrar que
 
 ## Impresoras Delta
 
-Las impresoras de arquitectura  **Delta** tienen simetría cilíndrica y permiten conseguir una gran velocidad dado fractura además están muy pensadas para trabajar con pieza con simetría cilíndrica y permiten muy fácilmente escalar la altura para conseguir tamaño de impresión en el eje z muy elevado
+Las impresoras de arquitectura  **Delta** tienen simetría cilíndrica y permiten conseguir una gran velocidad dado fractura además están muy pensadas para trabajar con pieza con simetría cilíndrica y permiten escalar fácilmente la altura para conseguir un tamaño de impresión en el eje z muy elevado. 
+
+Veamos un modelo antiguo para entender la complejidad. En este caso hay un motor en cada una de los 3 ejes que mueve una varilla roscada para deslizar verticalmente el patín.
 
 ![reprap delta](http://jeromeabel.net/files/ressources/democratie-industrielle/bonus-images/fab/delta-robot-reprap-helium-frog.jpg)
 
+Veamos un modelo comercial donde se utilizan patines que deslizan por la estructura de los ejes que está hecha con perfiles de aluminio:
+
+
+![Modelo comercial](./images/he3d-dlt-180-assembled-1.jpg)
 
 El movimiento del extrusor se consigue mediante movimientos paralelos de 3 patines por cada uno de los ejes verticales. La diferencia entre la altura de ellos da lugar a los desplazamientos en el plano XY del extrusor.
 
 ![Comparación delta vs cartesiana](./images/3ddelta.jpg)
+
+Estas impresoras consiguen una gran velocidad de impresión, pero el proceso de calibrado es bastante más complejo que lass cartesianas.
 
 ## Impresoras colgantes
 
@@ -42,6 +50,8 @@ Las impresoras cerradas tienen la ventaja de que por un lado conseguimos una may
 
 
 Últimamente estamos viendo la aparición de impresoras que no somos otra cosa que un brazo robótico al que se le coloca una herramienta que es un fusor en el extremo de esta forma aprovechamos y la precisión y la velocidad de movimiento del brazo robótico para conseguir una impresora 3D no es propiamente una impresora 3D en el sentido de que una herramienta mucho más general pero que se puede la que se pueden conseguir muy buenos resultado
+
+![10](./images/scara.jpg)
 
 **Ejemplo con Hormigón**
 
