--- a/4.0.0.EstructuraImpresora3D.md
+++ b/4.0.0.EstructuraImpresora3D.md
@@ -1,6 +1,6 @@
 # Estructura de una impresora 3D
 
-En este vídeo vamos a comenzar hablando sobre la estructura de la impresora, los diferentes componentes para conocerlos mejor antes de empezar a trabajar con ellos, entender el funcionamiento y ver los distintos tipos de impresora que tenemos disponibles.
+En este tema vamos a comenzar hablando sobre la estructura de la impresora, los diferentes componentes para conocerlos mejor antes de empezar a trabajar con ellos, entender el funcionamiento y ver los distintos tipos de impresora que tenemos disponibles.
 
 
 
@@ -8,7 +8,7 @@ En este vídeo vamos a comenzar hablando sobre la estructura de la impresora, lo
 
 Una impresora 3D no es más que una máquina **CNC** (Control Numérico Computerizado) a la que hemos añadido una herramienta de deposición de materiales, que llamaremos **extrusor**. Con otras palabras: una máquina que va depositando un determinado material con una gran precisión. 
 
-Lla mayoría de la impresora tienen una geometría cartesiana es decir se mueven en los tres ejes espaciales XYZ. La nomenclatura habitual de los ejes es la siguiente:
+La mayoría de las impresoras tienen una geometría cartesiana es decir se mueven en los tres ejes espaciales XYZ. La nomenclatura habitual de los ejes es la siguiente:
 
 * El eje X representa el movimiento desde la izquierda a la derecha de la impresión
 * El eje Y normalmente se refiere a la profundidad,  acercándose o alejándose de nosotros
@@ -42,7 +42,7 @@ Vamos a ver ahora un ejemplo un poco más complejo de una impresora algo más ac
 
 Vamos a ver ahora un ejemplo un poco más complejo de una impresora algo más actual sería una Prusa i3 dónde se pueden identificar más componentes:
 
-![Prusa i3](./images/prusai3.png)
+![Modelo Prusa i3](./images/prusai3.png)
 
 
 * En esta impresora la estructura es un marco metálico en el que se sujetan los diferentes componentes. 
